# minDyn

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  script.sh
examples/: dynamic.mindyn  factorial.mindyn  loop.mindyn
src/: AST.h  AST_CodeGen.cpp  CodeGen.h  JIT.cpp  JIT.h  main.cpp
tests/: CMakeLists.txt  test_parser.cpp  test_runner.cpp
